# ReActor

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.reactor-worker  Dockerfile.reactor-worker.dockerignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  bunfig.toml  package.json
.github/: SECURITY.md  VOUCHED.td
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  vouch-pr.yml
.reactor/commands/: fix-issues.md  learn.md  review-prs.md
.upstream/: oh-my-pi.json  rename-map.json  sync-report.json
apps/desktop/: CHANGELOG.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
assets/: banner.html
crates/reactor-ast/: Cargo.toml
crates/reactor-iso/: Cargo.toml
crates/reactor-natives/: Cargo.toml
crates/reactor-natives/src/: ast.rs  block.rs  crash_handler.rs  fd.rs  glob.rs  grep.rs  iofs.rs  iso.rs  lib.rs  power.rs  ps.rs  shell.rs  summary.rs  task.rs  testing.rs  text.rs  tokens.rs  workspace.rs
crates/reactor-natives/src/fonts/: Silver.LICENSE
crates/reactor-shell/: Cargo.toml
crates/reactor-uu-diff/: Cargo.toml
crates/reactor-uu-grep/: Cargo.toml
crates/reactor-uutils-ctx/: Cargo.toml
crates/reactor-walker/: Cargo.toml
docs/: ERRATA-GPT5-HARMONY.md  advisor-watchdog.md  ai-schema-normalize.md  approval-mode.md  auth-broker-gateway.md  bash-tool-runtime.md  brand.md  collab.md  compaction.md  config-usage.md  context-files.md  custom-tools.md  desktop.md  environment-variables.md  extension-loading.md  extensions.md  fs-scan-cache-architecture.md  gemini-manifest-extensions.md  hooks.md  install-id.md  keybindings.md  local-models.md  lsp-config.md  macos-signing-notarization.md  magic-keywords.md  marketplace.md  mcp-config.md  mcp-protocol-transports.md  mcp-runtime-lifecycle.md  mcp-server-tool-authoring.md  mnemosyne-memory-backend.md  models.md  native-crates.md  natives-addon-loader-runtime.md  natives-architecture.md  natives-binding-contract.md  natives-build-release-debugging.md  natives-media-system-utils.md  natives-rust-task-cancellation.md  natives-shell-pty-process.md  (+26 more)
docs/skills/: authoring-extensions.md  authoring-hooks.md  authoring-marketplaces.md
docs/toolconv/: gemini.md  (+2 more)
infra/: reload-runner.sh  runner.Dockerfile  tune-kata-runtime.sh
patches/: @ark%2Fschema@0.56.2.patch
python/reactor-rpc/: README.md  pyproject.toml
python/reactor-rpc/src/reactor_rpc/: client.py
python/reactor-rpc/tests/: test_client.py  test_host_uris.py  test_protocol.py  test_user_group.py
scripts/: analyze_small_edits.py  bash_corpus_stats.jl  check-brand.ts  check-spoofed-versions.ts  ci-macos-sign.sh  ci-macos-upload-secrets.sh  ci-release-build-binaries.test.ts  ci-release-build-binaries.ts  ci-release-notes.ts  ci-release-publish.ts  ci-test-ts.ts  ci-update-brew-formula.test.ts  ci-update-brew-formula.ts  edit-benchmark.py  edit_benchmark_common.py  finalize-upstream-sync.ts  fix-dts-extensions.test.ts  fix-test-imports.ts  generate-brand-assets.mjs  install-sh.test.ts  install.ps1  install.sh  link-reactor.sh  link-reactor.test.ts  macos-entitlements.plist  rate-edit-tool.py  release.ts  rewrite-changelog.ts  rewrite-system-prompt.ts  setup-npm-trust.ts  sync-upstream.ts  sync-versions.ts  tool-prompt-usage.ts  tool_io.py
(+168 files in other folders)
