[package]
name = "reactor-desktop"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
